buildscript {
	ext {
		springBootVersion = '1.5.3.RELEASE'
     baseImage = "omar-base"
     dockerStatementsOverride = {
       [
          "FROM ${project.dockerNamespaceUrl}${project.ext.baseImage}:${project.dockerAppTag}",
          "MAINTAINER DigitalGlobe-RadiantBlue",
          """LABEL com.digitalglobe.version="" """,
	  """ENV SPRING_CLOUD_CONFIG_ENABLED=true \\
                       SPRING_CLOUD_DISCOVERY_ENABLED=true """,
          "COPY ${project.name}-${buildVersion}-${buildVersionTag}.jar /home/omar",
          "EXPOSE 9411",
         "WORKDIR /home/omar",
         "CMD java -server -Xms256m -Xmx1024m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+UseGCOverheadLimit -XX:+UnlockExperimentalVMOptions  -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Djava.security.egd=file:/dev/./urandom -jar /home/omar/${project.name}-${buildVersion}-${buildVersionTag}.jar"
       ]
     }
	}
  if(System.env.OMAR_COMMON_PROPERTIES)
  {
      apply from: System.env.OMAR_COMMON_PROPERTIES
  }
   repositories {
      mavenLocal()
      maven { url "${ossimMavenProxy}" }
      mavenCentral()
   }
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
    id "org.sonarqube" version "2.5"
}

apply plugin: 'groovy'
apply plugin: 'eclipse'
apply plugin: 'spring-boot'
apply plugin: "java"
apply plugin: "maven-publish"
apply plugin: "maven"
group "io.ossim.omar.apps"

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
  mavenLocal()
  maven { url "${ossimMavenProxy}" }
  mavenCentral()
}


dependencies {
    compile('org.codehaus.groovy:groovy')
    //compile('io.zipkin.java:zipkin-server')
    compile('io.zipkin.zipkin2:zipkin:2.0.0')
    compile('io.zipkin.java:zipkin-autoconfigure-ui')
    compile('io.zipkin.java:zipkin-ui')
    compile "org.springframework.cloud:spring-cloud-starter-config"
    testCompile('org.springframework.boot:spring-boot-starter-test')

}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Dalston.SR3"
	}
}

publishing {
  publications {
    mavenJava(MavenPublication) {
      from components.java
    }
  }
}
